fix(list-item): hide headline overflow and fix width.

--- a/list/internal/listitem/_list-item.scss
+++ b/list/internal/listitem/_list-item.scss
@@ -73,6 +73,7 @@
     margin: 0;
     text-align: unset;
     text-decoration: none;
+    width: 100%;
   }
 
   .list-item {
